# pni-libraries.libpnicore

./: .cproject  .gitignore  .project  .sconsign.dblite  .travis.yml  BuildConfig.py  CHANGELOG.md  CMakeLists.txt  ChangeLog  DebConfig.py  Doxyfile  INSTALL  Makefile  README  README.md  RPMConfig.py  SConstruct  TODO  _config.yml  builddeb.sh  conanfile.txt  genindex.html  index.html  libpniutils-0.0.1.spec  mkdebs.sh  objects.inv  pnicore-config.cmake  pnicore-config.cmake.in  search.html  searchindex.js
cmake/: CMakeLists.txt  pnicore-config.cmake
configure/: CMakeLists.txt  CheckCompilerCaps.txt  CheckTypeSizes.cmake  CheckTypeSizes.txt  InstallConfig.cmake  SConscript
configure/src/: bind_test.cpp  explicit_conversion_test.cpp  lambda_function_test.cpp
doc/: .gitignore  CMakeLists.txt  Doxyfile.cmake  Doxyfile.standard.in  SConscript  array_design.asta  array_design.asta.bak  buffer_classes  conf.py.in  data_classes  examples_description.in  index_mapping_classes  installation.in  io_classes  iterator_types  mainpage.cmake  mainpage.in  multidim_array_classes  numeric_array_types  usage.in
doc/admin-guide/: .gitignore  admin-guide.tex
doc/api_doc/: CMakeLists.txt  Doxyfile.cmake  index.rst  mainpage.dox.cmake  mdarray_api.rst  type_api.rst  type_erasure_api.rst
doc/devel/: array_view.txt
doc/examples/: .gitignore  CMakeLists.txt  Makefile  SConstruct  array_arithmetic1.cpp  array_arithmetic2.cpp  array_arithmetic3.cpp  array_create.cpp  array_inquery.cpp  array_linear_access.cpp  array_multiindex.cpp  array_stl.cpp  array_view.cpp  array_view_container.cpp  cbf_reader.cpp  copy_file.cpp  example_array1.cpp  example_array2.cpp  example_array3.cpp  example_array4.cpp  example_buffer1.cpp  example_buffer2.cpp  example_buffer3.cpp  fio_reader.cpp  tif_reader.cpp  type_erasure1.cpp  type_erasure2.cpp  type_erasure3.cpp  type_erasure_record.cpp
doc/images/: classes.dia  expression_template.dia
doc/users-guide/: .gitignore  users-guide.tex
doc/users_guide/: .gitignore  CMakeLists.txt  UseLATEX.cmake  arrays.rst  conf.py.in  index.rst  installation.rst  libpnicore_ug.tex  types.rst
include/: CMakeLists.txt
include/pni/: CMakeLists.txt  core.hpp
src/: .gitignore  AbstractBuffer.cpp  AbstractBuffer.hpp  Array.cpp  Array.hpp  ArrayElementTypeInfo.hpp  ArrayFactory.hpp  ArrayObject.cpp  ArrayObject.hpp  ArrayOperations.hpp  ArrayRep.hpp  ArraySelection.cpp  ArraySelection.hpp  ArrayShape.cpp  ArrayShape.hpp  ArrayTrait.hpp  ArrayView.hpp  ArrayViewSelector.hpp  Binary.hpp  Buffer.cpp  Buffer.hpp  BufferFactory.hpp  BufferHolder.hpp  BufferObject.cpp  BufferObject.hpp  CIndexMap.cpp  CIndexMap.hpp  CMakeLists.txt  CompType.hpp  ComplexUtils.cpp  ComplexUtils.hpp  ContainerUtils.hpp  DArray.hpp  DBuffer.hpp  DataObject.cpp  DataObject.hpp  DynamicArray.hpp  DynamicBuffer.hpp  ExceptionUtils.cpp  ExceptionUtils.hpp  (+135 more)
src/arrays/: CMakeLists.txt  slice.cpp
src/benchmark/: BenchmarkResult.cpp  BenchmarkResult.hpp  BenchmarkRunner.hpp  CMakeLists.txt  ChronoTimer.hpp  ClockTimer.hpp  benchmark_result.cpp  benchmark_result.hpp  benchmark_runner.cpp  benchmark_runner.hpp  chrono_timer.cpp  chrono_timer.hpp  clock_timer.hpp
src/config/: cli_args.cpp  cli_args.hpp  config_argument.hpp  config_option.hpp  config_parser.cpp  config_parser.hpp  configuration.cpp  configuration.hpp  library_config.cpp  library_config.hpp
src/configuration/: CMakeLists.txt  config_parser.cpp  configuration.cpp
src/expr/: Add.hpp  Div.hpp  Mult.hpp  OpTraits.hpp  Sub.hpp
src/hardware/: cpu.hpp  cpuinfo.hpp
src/io/: CBFBOReaders.hpp  CBFBinStreamReader.cpp  CBFBinStreamReader.hpp  CBFHeader.hpp  CBFReader.cpp  CBFReader.hpp  CBFTypes.hpp  CIFBinHeader.cpp  ColumnInfo.cpp  ColumnInfo.hpp  DataReader.cpp  DataReader.hpp  DectrisCBFReader.cpp  DectrisCBFReader.hpp  FIOReader.cpp  FIOReader.hpp  FileList.hpp  Image.hpp  ImageChannelInfo.hpp  ImageInfo.cpp  ImageInfo.hpp  ImageReader.cpp  ImageReader.hpp  PCIFBinHeader.cpp  Reader.cpp  Reader.hpp  SConscript  SpreadsheetReader.cpp  SpreadsheetReader.hpp  TIFFExceptions.cpp  TIFFExceptions.hpp  TIFFFile.cpp  TIFFFile.hpp  TIFFIDF.cpp  TIFFIDF.hpp  TIFFIDFAbstractEntry.cpp  TIFFIDFAbstractEntry.hpp  TIFFIDFEntry.hpp  TIFFIFD.cpp  TIFFIFD.hpp  (+36 more)
src/math/: Add.hpp  Div.hpp  Mult.hpp  OpTraits.hpp  Sub.hpp  add.hpp  div.hpp  div_op.hpp  inplace_arithmetics.hpp  mt_inplace_arithmetics.hpp  mult.hpp  op_traits.hpp  sub.hpp
src/misc/: CMakeLists.txt
src/pni/: CMakeLists.txt
src/policies/: BinaryArithmetics.hpp  InplaceArithmetics.hpp  TypeInfo.hpp
src/type_erasures/: CMakeLists.txt  array.cpp  value.cpp  value_ref.cpp
src/types/: CMakeLists.txt  complex_utils.cpp  is_checked_convertible.cpp  is_convertible.cpp  is_unchecked_convertible.cpp  none.cpp  traits.cpp  type_utils.cpp  utils.hpp
test/: .gitignore  AddOperatorTest.cpp  AddOperatorTest.hpp  ArraySelectionTest.cpp  ArraySelectionTest.hpp  ArrayShapeTest.cpp  ArrayShapeTest.hpp  ArrayTest.cpp  ArrayTest.hpp  ArrayViewSelectorTest.cpp  ArrayViewSelectorTest.hpp  ArrayViewTest.cpp  ArrayViewTest.hpp  BinaryTest.cpp  BinaryTest.hpp  BufferHelper.hpp  BufferObjectTest.cpp  BufferObjectTest.hpp  BufferTest.cpp  BufferTest.hpp  CMakeLists.txt  DArrayTest.cpp  DArrayTest.hpp  DBufferTest.cpp  DBufferTest.hpp  DataObjectTest.cpp  DataObjectTest.hpp  DivOperatorTest.cpp  DivOperatorTest.hpp  DynamicArrayTest.cpp  DynamicArrayTest.hpp  DynamicBufferTest.cpp  DynamicBufferTest.hpp  EqualityCheck.cpp  EqualityCheck.hpp  IOBenchmark.cpp  IOBenchmark.hpp  IOBenchmarkResult.cpp  IOBenchmarkResult.hpp  IndexMapBaseTest.cpp  (+172 more)
test/arrays/: CMakeLists.txt  array_selection_test.cpp  array_selection_test.hpp  array_test.cpp  array_test.hpp  array_types.hpp  array_view_test.cpp  array_view_test.hpp  array_view_unary_arithmetic_test.cpp  array_view_unary_arithmetic_test.hpp  array_view_utils_test.cpp  array_view_utils_test.hpp  arrays_test.cpp  common.hpp  darray_test.cpp  darray_test.hpp  dynamic_mdarray_test.cpp  dynamic_mdarray_test.hpp  fix_mdarray_test.cpp  fix_mdarray_test.hpp  mdarray_test.cpp  (+10 more)
(+726 files in other folders)
